update web logic

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,23 @@ cache.json
 nes/
 snes/
 n64/
-
-*-org.json
-*.bak
+ps/
+ps2/
+gb/
+gbc/
+gba/
+nds/
+segaMD/
+segaSaturn/
+ngpc/
+ngp/
+atari2600/
+atari5200/
+atari7800/
+lynx/
+ws/
+wsc/
+vb/
+segaGG/
+jaguar/
+pce/
